--- a/provisioner/package.json
+++ b/provisioner/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
+    "deploy": "npx sls deploy",
     "test": "npm run test:types && npm run test:format",
     "lint": "eslint --ext .js,.ts src/**",
     "format": "npm run prettier:fix",
@@ -15,20 +16,20 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.109",
-    "@types/node": "^18.11.18",
-    "esbuild": "^0.16.16",
-    "prettier": "^2.8.2",
-    "serverless": "^3.26.0",
-    "serverless-esbuild": "^1.37.0",
-    "typescript": "^4.9.4"
+    "@types/aws-lambda": "^8.10.110",
+    "@types/node": "^18.14.0",
+    "esbuild": "^0.17.10",
+    "prettier": "^2.8.4",
+    "serverless": "^3.27.0",
+    "serverless-esbuild": "^1.38.0",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@aws-sdk/client-ecs": "^3.245.0",
-    "@aws-sdk/client-secrets-manager": "^3.245.0",
-    "@aws-sdk/client-ssm": "^3.245.0",
-    "@aws-sdk/client-sts": "^3.245.0",
+    "@aws-sdk/client-ecs": "^3.272.0",
+    "@aws-sdk/client-secrets-manager": "^3.272.0",
+    "@aws-sdk/client-ssm": "^3.272.0",
+    "@aws-sdk/client-sts": "^3.272.0",
     "@aws-sdk/util-arn-parser": "^3.208.0",
-    "zod": "^3.20.2"
+    "zod": "^3.20.6"
   }
 }
