Update to Debian Bookworm -based container image and specify platform in build command example
 - Ubuntu 18.04 is EOL

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,53 +1,67 @@
-# Stick with Ubuntu 18.04 because:
-#  - Starting with 20.04 chromium-browser is available via a snap, which
-#    does not work with containers
-#  - Workforce agent itself has some known compatibility problems with 22.04
-FROM ubuntu:18.04
+FROM debian:bookworm
 
-ENV LANG=C.UTF-8 LANGUAGE=C.UTF-8 LC_ALL=C.UTF-8 DEBIAN_FRONTEND=noninteractive
+# Set all variables that affect programs to follow same encoding
+ENV LANG=C.UTF-8 LANGUAGE=C.UTF-8 LC_ALL=C.UTF-8
 
-# Install updates and dependencies.
-# Can be amended to include anything your bots need.
-RUN apt-get update && apt-get -y upgrade && \
-  # wget needed during container build
-  apt-get -y install wget && \
-  # These dependencies are part of the standard Robocorp container.
-  # They are not mandatory, but if you want to have a drop-in replacement
-  # for the Robocorp-hosted cloud containers, this makes it easier.
-  apt-get install -y wget bzip2 ca-certificates curl bash chromium-browser chromium-chromedriver build-essential libgtk-3-0 && \
-  apt-get install -y fonts-indic fonts-noto fonts-noto-cjk && \
-  apt-get install -y zip libdbus-glib-1-2 && \
-  apt-get install -y git && \
-  # Clean up debs to reduce the image size
-  apt-get clean && \
-  rm -rf /var/lib/apt/lists/*
+# libgtk-3-0 dependency added because Firefox installation from conda-forge
+# depends on this library and it wasn't available in the base container
 
-# Setup a dedicatd user for worker
-RUN useradd -ms /bin/bash worker
+RUN apt-get update --fix-missing \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+        wget \
+        bzip2 \
+        ca-certificates \
+        curl \
+        bash \
+        chromium \
+        chromium-driver \
+        build-essential \
+        libgtk-3-0 \
+        git \
+        fonts-indic \
+        fonts-noto \
+        fonts-noto-cjk \
+        zip \
+        libdbus-glib-1-2 \
+        wkhtmltopdf \
+        xvfb \
+        libreoffice \
+        unoconv \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && echo "Installed Packages: " && dpkg -l
 
+RUN useradd --no-log-init --system --create-home --shell /bin/bash worker
+
+# Running as non sudo user 'worker'
 USER worker
 WORKDIR /home/worker
 
-# Download and initialize worker application.
-#  - download site still has the old name "workforce agent", but we'll
-#    opt in to the new naming locally
-RUN mkdir bin && \
-  wget https://downloads.robocorp.com/workforce-agent-core/releases/latest/linux64/robocorp-workforce-agent-core -O bin/robocorp-worker && \
-  chmod a+x ./bin/robocorp-worker && \
-  ./bin/robocorp-worker init --instance-path /home/worker/instance
+# Add Agent Core inside the image
+RUN mkdir -p /home/worker/bin && \
+    mkdir -p /home/worker/.robocorp && \
+    mkdir -p /home/worker/bin/conda && \
+    mkdir -p /home/worker/instance
 
-# Set up a precrafted worker configuration file. The default is most likely fine,
-# and seldom needs any tuning.
-COPY resources/rtconfig.yml /home/worker/instance/
+COPY ./resources/rtconfig.yml instance/rtconfig.yml
 
-# Script that deals with starting the worker.
-COPY resources/start.sh start.sh
+RUN curl --silent --show-error --fail -o \
+    /home/worker/bin/robocorp-worker \
+    https://downloads.robocorp.com/workforce-agent-core/releases/latest/linux64/robocorp-workforce-agent-core
+RUN chmod +x /home/worker/bin/robocorp-worker
 
-# To optimize start times of robots, construct python environments for common
-# python environments here. In our example we're using https://github.com/robocorp/example-google-image-search,
-# and thus fetching the latest conda.yaml.
-RUN wget https://raw.githubusercontent.com/robocorp/example-google-image-search/main/conda.yaml -O /tmp/prebuilt-conda.yaml && \
-    ./bin/rcc holotree --space workforce --controller agent.core.container --liveonly variables /tmp/prebuilt-conda.yaml && \
-    rm /tmp/prebuilt-conda.yaml
+# Initialize the Worker agent
+RUN /home/worker/bin/robocorp-worker init --log-level TRACE --rcc-exec-path /home/worker/bin/rcc
 
-ENTRYPOINT [ "./start.sh" ]
+# OPTIONAL: Prebuild common environment(s) into the container image
+# This will increase the image size, but the environments prebuilt will be ready-to-go for robot executions.
+#COPY ./prebuilt-env-2023-06-07.yaml prebuilt-envs/prebuilt-env-2023-06-07.yaml
+#RUN /home/worker/bin/rcc ht vars prebuilt-envs/prebuilt-env-2023-06-07.yaml --space workforce --controller agent.core.container --timeline \
+#    && rm -rf /home/worker/.robocorp/pipcache \
+#    && rm -rf /home/worker/.robocorp/pkgs \
+#    && rm -rf /home/worker/.robocorp/holotree/v*h
+
+# Set the local scripts in place
+COPY ./resources/start.sh start.sh
+
+CMD [ "./start.sh" ]
