--- a/provisioner/package.json
+++ b/provisioner/package.json
@@ -16,19 +16,20 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.126",
-    "@types/node": "^18.18.9",
-    "esbuild": "^0.19.5",
-    "prettier": "^3.0.3",
-    "serverless": "^3.36.0",
-    "serverless-esbuild": "^1.48.5",
-    "typescript": "^5.2.2"
+    "@types/aws-lambda": "^8.10.130",
+    "@types/node": "^18.19.0",
+    "esbuild": "^0.19.8",
+    "prettier": "^3.1.0",
+    "serverless": "^3.38.0",
+    "serverless-esbuild": "^1.49.0",
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@aws-sdk/client-ecs": "^3.445.0",
-    "@aws-sdk/client-secrets-manager": "^3.445.0",
-    "@aws-sdk/client-ssm": "^3.445.0",
-    "@aws-sdk/client-sts": "^3.445.0",
+    "@aws-crypto/client-node": "^4.0.0",
+    "@aws-sdk/client-ecs": "^3.462.0",
+    "@aws-sdk/client-secrets-manager": "^3.462.0",
+    "@aws-sdk/client-ssm": "^3.462.0",
+    "@aws-sdk/client-sts": "^3.462.0",
     "@aws-sdk/util-arn-parser": "^3.310.0",
     "zod": "^3.22.4"
   }
