--- a/provisioner/tsconfig.json
+++ b/provisioner/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "lib": ["es2022"],
-    "module": "commonjs",
+    "lib": ["es2023"],
+    "module": "node16",
     "target": "es2022",
 
     "strict": true,
     "esModuleInterop": true,
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "sourceMap": true,
     "outDir": "lib"
   },
